syntax = "proto3";

package com.cognite.client.dto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message Asset {
    message Aggregates {
        optional int32 child_count = 1;
        optional int32 depth = 2;
        repeated int64 path = 3;
    }

    optional int64 id = 1;
    optional string external_id = 2;
    optional string name = 3;
    optional int64 parent_id = 4;
    optional string parent_external_id = 5;
    optional string description = 6;
    optional int64 root_id = 7;
    optional int64 created_time = 8;
    optional int64 last_updated_time = 9;
    map<string, string> metadata = 10;
    repeated string labels = 11;
    optional string source = 12;
    optional int64 data_set_id = 13;
    Aggregates aggregates = 14;
}
